# synthetic-huber-wiesel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-web.yml
2025/: neuroai_for_biomed_eng_umh_2025_v1.py  neuroai_for_biomed_eng_umh_2025_v3.py
2026/: computing.py  controller.py  debug_rf_mask.py  gui_hubel_wiesel.py  model.py  neuroai_for_biomed_eng_2026_v1.py  plotting.py  plotting_GUI.py  sounds.py  view.py
2026/utilities/old/: latent_explorer.py
web/gui_huber_wiesel_web/: README.md  REWRITE_PLAN.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/gui_huber_wiesel_web/public/assets/: cifar50.json
web/gui_huber_wiesel_web/src/: App.tsx  styles.css
web/gui_huber_wiesel_web/src/core/: cifarSprite.ts  colors.ts  history.ts  neuronSelection.ts  sim.test.ts  sim.ts  store.test.ts  store.ts  types.ts
web/gui_huber_wiesel_web/src/ui/: DynamicsPanel.tsx  NeuronPanel.tsx  PerfHUD.tsx  PresetPanel.tsx  RatePlotPanel.tsx  SpikePlotPanel.tsx  StimulusPanel.tsx  WaveformPanel.tsx  plotUtils.ts  useKeyboardShortcuts.ts  useSimEngine.ts
